[package]
name = "cyp_quantum_circuit"
version = "0.1.69"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cyp_quantum_circuit"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
rayon = "^1.7"
rand = "0.8"
float-cmp = "0.9"
atomic_float = "0.1.0"
